--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,8 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
 }
 
-h1{
-    margin-left: auto;
-    margin-right: auto; 
+h1 {
+    text-align: center; 
 }
