--- a/css/styles.css
+++ b/css/styles.css
@@ -11,5 +11,6 @@ h1, p {
 nav {
     display: block;
     text-align: center;
-    margin: 1em auto;
+    margin-left: auto;
+    margin-right: auto;
 }
