--- a/css/styles.css
+++ b/css/styles.css
@@ -8,4 +8,9 @@ h1, p, nav {
     text-align: center; 
 }
 
-
+nav {
+    display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
