--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ h1, p, nav {
 }
 
 nav {
-    display: block;
+    display: inline-block;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
