--- a/css/styles.css
+++ b/css/styles.css
@@ -14,3 +14,12 @@ nav {
     margin-left: auto;
     margin-right: auto;
 }
+
+.content {
+    width: 80%;
+    background-color: #ac62f4;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
+    max-width: 500px;
+}
