--- a/css/styles.css
+++ b/css/styles.css
@@ -9,17 +9,16 @@ h1, p, nav {
 }
 
 nav {
-    display: inline-block;
+    display: block;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .content {
     width: 80%;
-    background-color: #ac62f4;
+    background-color: #ffffff;
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
     max-width: 500px;
+    color: #000000;
 }
