--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
     margin-right: auto;
 }
 
-h1, p, {
+h1, p {
     text-align: center; 
 }
 
@@ -18,6 +18,6 @@ h1, p, {
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
-    max-width: 500px;
+    max-width: 520px;
     color: #000000;
 }
