--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ h1, p {
 	text-align: center;
 	position: relative;
 	width: 220px;
-	margin: 0 auto;
+	margin: 0 0 15px auto;
 	cursor: pointer;
 }
 
@@ -74,11 +74,12 @@ button {
 .fill-one {
 	position: absolute;
 	background-image: linear-gradient(to right, #E040FB, #00BCD4);
+	background-size: 150% 150%;
 	height: 70px;
 	width: 320px;
 	border-radius: 5px;
 	margin: -40px 0 0 -140px;
-	z-index: -1;
+	z-index: -2;
 	transition: all 0.4s ease;
 }
 
@@ -101,11 +102,28 @@ button {
 }
 
 .button-container-two:hover .fill-two {
-	-webkit-animation: gradient 3s ease infinite;
-	-moz-animation: gradient 3s ease infinite;
-	animation: gradient 3s ease infinite;
+	-webkit-transform: translateX(100px);
+	-moz-transform: translateX(100px);
+	transform: translateX(100px);
 }
 
+.fill-three {
+	position: absolute;
+	background-image: linear-gradient(to right, #E040FB, #00BCD4);
+	background-size: 150% 150%;
+	height: 70px;
+	width: 320px;
+	border-radius: 5px;
+	margin: -40px 0 0 -140px;
+	z-index: -2;
+	transition: all 0.4s ease;
+}
+
+.button-container-three:hover .fill-three {
+	-webkit-transform: translateX(100px);
+	-moz-transform: translateX(100px);
+	transform: translateX(100px);
+}
 @-webkit-keyframes gradient {
 	0% {
 		background-position: 0% 50%;
