--- a/css/styles.css
+++ b/css/styles.css
@@ -32,9 +32,8 @@ h1, p {
 	  max-width: 540px;
 	}
 	.logo {
-		display: block;
-    margin-left: auto;
-    margin-right: auto;
+		align-content:center;
+		max-width: 540px;
 	}
   }
   
@@ -43,9 +42,8 @@ h1, p {
 	  max-width: 720px;
 	}
 	.logo {
-		display: block;
-    margin-left: auto;
-    margin-right: auto;
+		align-content:center;
+		max-width: 720px;
 	}
   }
 
