updated max width for devices smaller than 600px.

--- a/css-flexbox-photo-gallery/css/styles.css
+++ b/css-flexbox-photo-gallery/css/styles.css
@@ -37,6 +37,12 @@
       width: 50%;
     }
   }
+
+  @media (max-width: 600px) {
+    #gallery img {
+      width: 100%;
+    }
+ }
   
   .footer {
     text-align: center;
