--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ h1, p {
 .button-container {
 	text-align: center;
 	position: relative;
-	width: 220px;
+	width: 220x;
 	margin: 0 0 15px auto;
 	cursor: pointer;
 }
