--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,7 @@ button {
 	vertical-align: super;
 }
 
-.fill-one {
+.fill-cafe-menu {
 	position: absolute;
 	background-image: linear-gradient(to right, #E040FB, #00BCD4);
 	background-size: 150% 150%;
@@ -119,13 +119,13 @@ button {
 	transition: all 0.4s ease;
 }
 
-.button-container-one:hover .fill-one {
+.button-container-cafe-menu:hover .fill-cafe-menu {
 	-webkit-transform: translateX(100px);
 	-moz-transform: translateX(100px);
 	transform: translateX(100px);
 }
 
-.fill-two {
+.fill-registration-form {
 	position: absolute;
 	background-image: linear-gradient(to right, #E040FB, #00BCD4);
 	background-size: 150% 150%;
@@ -137,13 +137,13 @@ button {
 	transition: all 0.4s ease;
 }
 
-.button-container-two:hover .fill-two {
+.button-container-registration-form:hover .fill-registration-form {
 	-webkit-transform: translateX(100px);
 	-moz-transform: translateX(100px);
 	transform: translateX(100px);
 }
 
-.fill-three {
+.fill-survey-form {
 	position: absolute;
 	background-image: linear-gradient(to right, #E040FB, #00BCD4);
 	background-size: 150% 150%;
@@ -155,13 +155,13 @@ button {
 	transition: all 0.4s ease;
 }
 
-.button-container-three:hover .fill-three {
+.button-container-survey-form:hover .fill-survey-form {
 	-webkit-transform: translateX(100px);
 	-moz-transform: translateX(100px);
 	transform: translateX(100px);
 }
 
-.fill-four {
+.fill-rothko-painting {
 	position: absolute;
 	background-image: linear-gradient(to right, #E040FB, #00BCD4);
 	background-size: 150% 150%;
@@ -173,13 +173,13 @@ button {
 	transition: all 0.4s ease;
 }
 
-.button-container-four:hover .fill-four {
+.button-container-rothko-painting:hover .fill-rothko-painting {
 	-webkit-transform: translateX(100px);
 	-moz-transform: translateX(100px);
 	transform: translateX(100px);
 }
 
-.fill-five {
+.fill-flexbox-photo-gallery {
 	position: absolute;
 	background-image: linear-gradient(to right, #E040FB, #00BCD4);
 	background-size: 150% 150%;
@@ -191,13 +191,13 @@ button {
 	transition: all 0.4s ease;
 }
 
-.button-container-five:hover .fill-five {
+.button-container-flexbox-photo-gallery:hover .fill-flexbox-photo-gallery {
 	-webkit-transform: translateX(100px);
 	-moz-transform: translateX(100px);
 	transform: translateX(100px);
 }
 
-.fill-six {
+.fill-nutrition-label {
 	position: absolute;
 	background-image: linear-gradient(to right, #E040FB, #00BCD4);
 	background-size: 150% 150%;
@@ -209,13 +209,13 @@ button {
 	transition: all 0.4s ease;
 }
 
-.button-container-six:hover .fill-six {
+.button-container-nutrition-label:hover .fill-nutrition-label {
 	-webkit-transform: translateX(100px);
 	-moz-transform: translateX(100px);
 	transform: translateX(100px);
 }
 
-.fill-seven {
+.fill-quiz {
 	position: absolute;
 	background-image: linear-gradient(to right, #E040FB, #00BCD4);
 	background-size: 150% 150%;
@@ -227,11 +227,84 @@ button {
 	transition: all 0.4s ease;
 }
 
-.button-container-seven:hover .fill-seven {
+.button-container-quiz:hover .fill-quiz {
 	-webkit-transform: translateX(100px);
 	-moz-transform: translateX(100px);
 	transform: translateX(100px);
 }
+
+.fill-tribute {
+	position: absolute;
+	background-image: linear-gradient(to right, #E040FB, #00BCD4);
+	background-size: 150% 150%;
+	height: 80px;
+	width: 320px;
+	border-radius: 5px;
+	margin: -60px 0 0 -140px;
+	z-index: -2;
+	transition: all 0.4s ease;
+}
+
+.button-container-tribute:hover .fill-tribute {
+	-webkit-transform: translateX(100px);
+	-moz-transform: translateX(100px);
+	transform: translateX(100px);
+}
+
+.fill-mettrys {
+	position: absolute;
+	background-image: linear-gradient(to right, #E040FB, #00BCD4);
+	background-size: 150% 150%;
+	height: 80px;
+	width: 320px;
+	border-radius: 5px;
+	margin: -60px 0 0 -140px;
+	z-index: -2;
+	transition: all 0.4s ease;
+}
+
+.button-container-mettrys:hover .fill-mettrys {
+	-webkit-transform: translateX(100px);
+	-moz-transform: translateX(100px);
+	transform: translateX(100px);
+}
+
+.fill-circle-a {
+	position: absolute;
+	background-image: linear-gradient(to right, #E040FB, #00BCD4);
+	background-size: 150% 150%;
+	height: 80px;
+	width: 320px;
+	border-radius: 5px;
+	margin: -60px 0 0 -140px;
+	z-index: -2;
+	transition: all 0.4s ease;
+}
+
+.button-container-circle-a:hover .fill-circle-a {
+	-webkit-transform: translateX(100px);
+	-moz-transform: translateX(100px);
+	transform: translateX(100px);
+}
+
+.fill-wordpress-websites {
+	position: absolute;
+	background-image: linear-gradient(to right, #E040FB, #00BCD4);
+	background-size: 150% 150%;
+	height: 80px;
+	width: 320px;
+	border-radius: 5px;
+	margin: -60px 0 0 -140px;
+	z-index: -2;
+	transition: all 0.4s ease;
+}
+
+.button-container-wordpress-websites:hover .fill-wordpress-websites {
+	-webkit-transform: translateX(100px);
+	-moz-transform: translateX(100px);
+	transform: translateX(100px);
+}
+
 @-webkit-keyframes gradient {
 	0% {
 		background-position: 0% 50%;
