created new project: css balance sheet and updated project links and project buttons.

--- a/css/styles.css
+++ b/css/styles.css
@@ -251,6 +251,24 @@ button {
 	transform: translateX(100px);
 }
 
+.fill-balance-sheet {
+	position: absolute;
+	background-image: linear-gradient(to right, #E040FB, #00BCD4);
+	background-size: 150% 150%;
+	height: 80px;
+	width: 320px;
+	border-radius: 5px;
+	margin: -60px 0 0 -140px;
+	z-index: -2;
+	transition: all 0.4s ease;
+}
+
+.button-container-balance-sheet:hover .fill-balance-sheet {
+	-webkit-transform: translateX(100px);
+	-moz-transform: translateX(100px);
+	transform: translateX(100px);
+}
+
 .fill-mettrys {
 	position: absolute;
 	background-image: linear-gradient(to right, #E040FB, #00BCD4);
