--- a/css-picasso/css/styles.css
+++ b/css-picasso/css/styles.css
@@ -254,13 +254,21 @@ body {
     font-size: 30px;
   }
   
-  a:link { text-decoration: none; }
+  .footer {
+    display: flex;
+      justify-content: center;
+      color: #dfdfe2;
+  }
+
+  a:link { 
+    color: white;
+    text-decoration: none; }
 
 
-a:visited { text-decoration: none; }
+a:visited { color: white; text-decoration: none; }
 
 
-a:hover { text-decoration: none; }
+a:hover { color: white; text-decoration: none; }
 
 
-a:active { text-decoration: none; }
+a:active { color: white; text-decoration: none; }
