created new piano index and css files. created new technical documentation index and css files.

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,3 +123,10 @@ a:hover { text-decoration: none; }
 
 
 a:active { text-decoration: none; }
+
+.footer {
+      display: flex;
+      justify-content: center;
+      text-align: center;
+  
+}
