--- a/css/styles.css
+++ b/css/styles.css
@@ -158,8 +158,9 @@ img {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #fff;
+  padding-top: 100px;
 
 }
 
