--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,13 @@ img {
   max-width: 500px;
 }
 
+.jesse-pic {
+  display: block;
+  max-width: 500px;
+  width: 500px;
+  height: 570px;
+}
+
 /* nav */
 
 .nav {
