--- a/css/styles.css
+++ b/css/styles.css
@@ -190,6 +190,7 @@ img {
 #intro-grid {
   display: flex;
   width: 100%;
+  height: 100%;
   max-width: 1000px;
   margin: 0 auto;
   margin-bottom: 6rem;
@@ -221,8 +222,9 @@ img {
   margin: auto;
   padding: 5px 10px;
   align-items: center;
-  flex-direction: row;
-  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: column;
+  height: 50%;
   }
 
 /* Projects section */
