--- a/css/styles.css
+++ b/css/styles.css
@@ -179,6 +179,8 @@ img {
 
 .intro {
   color: #333333;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .intro-section {
@@ -202,6 +204,7 @@ img {
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
+  align-items: center;
 }
 
 .column {
@@ -222,10 +225,16 @@ img {
   color: var(--main-purple);
   margin: auto;
   padding: 5px 10px;
-  align-items: center;
   justify-content: center;
   flex-direction: column;
   height: 50%;
+  }
+
+  hr {
+    width: 50%;
+    max-height: 20px;
+    
+   
   }
 
 /* Projects section */
