--- a/css/styles.css
+++ b/css/styles.css
@@ -257,6 +257,11 @@ img {
   }
 }
 
+.projects-subsection-header {
+  max-width: 640px;
+  margin: 0 auto 6rem auto;
+}
+
 /* "Automagic" image grid using no media queries */
 .projects-grid {
   display: grid;
